2004-06-15  Alan Modra  <amodra@bigpond.net.au>

	* generic/gdbtk-cmds.c (gdb_load_info): Use bfd_get_section_size
	instead of bfd_get_section_size_before_reloc.

2004-06-11  Martin Hunt  <hunt@redhat.com>

	* generic/gdbtk-cmds.c (gdb_find_file_command): Use
	symtab_to_fullname() instead of symtab_to_filename().
	(gdb_loc): Ditto.
	(gdb_loadfile): Ditto.
	* generic/gdbtk-bp.c (gdb_get_breakpoint_info): Ditto.
	(gdb_get_tracepoint_info): Ditto.	

	* generic/gdbtk-register.c (get_register): Simplify and remove
	references to DEPRECATED_REGISTER_CONVERT_TO_VIRTUAL.

2004-05-27  Martin Hunt  <hunt@redhat.com>

	* library/tdump.tcl (build_win): Remove old nonworking
	code to select scrolledtext mode.  Just use "dynamic".

2004-04-22  Keith Seitz  <kseitz@sources.redhat.com>

	* generic/gdbtk-hooks.c (gdbtk_add_hooks): "Update" deprecated hooks.
	"Houston... We have a problem."
	* generic/gdbtk-interp.c (gdbtk_interpreter_resume): Likewise.
 	* generic/gdbtk.c (gdbtk_init_1): Likewise.
	
2004-04-19  Roland McGrath  <roland@redhat.com>

	* generic/gdbtk-hooks.c: Update gdbtk_pre_add_symbol forward decl to
	match defn type change.

2004-04-15  Roland McGrath  <roland@redhat.com>

	* generic/gdbtk-hooks.c (gdbtk_pre_add_symbol): Add const to arg type.
	(pre_add_symbol): Likewise in extern decl.

2004-04-05  Martin Hunt  <hunt@redhat.com>

	* library/session.tcl: Make hostname and portname
	session-dependent. Add gdb_bg_num (the color
	scheme number) as a per-session variable.

	* library/prefs.tcl (pref_read): If color schemes are in use,
	set colors based on the current scheme.
	(pref_save): Add "bg" section.
	(pref_set_defaults): Define new variable gdb/use_color_schemes
	and define 16 default background colors.

	* library/managedwin.itb (ManagedWin::window_name): Append
	window "instance" string to window name.
	(ManagedWin::window_instance): Set window instance string.

	* library/debugwin.itb: Add a reconfig method to restore